小程序接口迁移到ry4